API Test TestWebKitAPI.WebKit.DefaultQuota is very flaky on High Sierra https://bugs.webkit.org/show_bug.cgi?id=202850

Reviewed by Alex Christensen.

Make sure the DOMCache / DOMCacheStorage objects stay alive while they have pending
promises to be resolved.

* Modules/cache/DOMCache.cpp:
(WebCore::DOMCache::hasPendingActivity const):
* Modules/cache/DOMCache.h:
* Modules/cache/DOMCache.idl:
* Modules/cache/DOMCacheStorage.cpp:
(WebCore::DOMCacheStorage::hasPendingActivity const):
* Modules/cache/DOMCacheStorage.h:
* Modules/cache/DOMCacheStorage.idl:


Canonical link: https://commits.webkit.org/216321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251031 268f45cc-cd09-0410-ab3c-d52691b4dbfc