Source/WebCore/Modules/cache/DOMCacheStorage.cpp
@@ -293,4 +293,9 @@ bool DOMCacheStorage::canSuspendForDocumentSuspension() const
     return true;
 }
 
+bool DOMCacheStorage::hasPendingActivity() const
+{
+    return m_taskQueue->hasPendingTasks() || ActiveDOMObject::hasPendingActivity();
+}
+
 } // namespace WebCore
